examples/test/testpolicy14450.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14450
  namespace: namespace406
spec:
  podSelector:
    matchLabels:
      key6: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value44
          key34: value27
          key12: value24
      podSelector:
        matchLabels:
          key15: value45
          key11: value34
          key24: value28
